# CMakeList.txt : CMake project for AmazonPractice, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AmazonPractice")

# Add source to this project's executable.
add_executable (AmazonPractice "BST.cpp" "BST.h")

# TODO: Add tests and install targets if needed.
